deploy-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: beltexam2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: my-db-container
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgresdb
          volumes:
          - name: postgresdb
            persistentVolumeClaim:
              claimName: db-pv-claim
