service-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: beltexam2
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - name: ui-service
      port: 80
      targetPort: 80
      nodePort: 31000
