ingress-ui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-service
              port:
                number: 80
